--- a/application/index/view/center/head.html
+++ b/application/index/view/center/head.html
@@ -1,3 +1,11 @@
 {css href="/public/center/lib/weui.min.css" /}
 {css href="/public/center/css/jquery-weui.css" /}
 {css href="/public/center/css/demos.css" /}
+<style>
+	body{
+		background-color: #f8f8f8;
+	}
+</style>
+<div style="display: none;">
+	<script src="https://s19.cnzz.com/z_stat.php?id=1000542617&web_id=1000542617" language="JavaScript"></script>
+</div>
