--- a/application/index/view/center/head.html
+++ b/application/index/view/center/head.html
@@ -1,6 +1,10 @@
 {css href="/public/center/lib/weui.min.css" /}
 {css href="/public/center/css/jquery-weui.css" /}
 {css href="/public/center/css/demos.css" /}
+{js href="/public/center/lib/jquery-2.1.4.js"}
+{js href="/public/center/lib/fastclick.js"}
+{js href="/public/center/js/jquery-weui.js"}
+
 <style>
 	body{
 		background-color: #f8f8f8;
