--- a/application/index/view/center/index.html
+++ b/application/index/view/center/index.html
@@ -44,6 +44,7 @@
     <div class="weui-grids">
       <a href="{:url('bxq_score')}" class="weui-grid js_grid">
         <div class="weui-grid__icon">
+          <span class="weui-badge" style="position: absolute;top: 0.6em;right: 1em;">Hot</span>
           <img src="/public/center/icon/报告查询.png" alt="">
         </div>
         <p class="weui-grid__label">
@@ -58,20 +59,30 @@
           全部成绩
         </p>
       </a>
-      <a href="#" class="weui-grid js_grid">
+      <a href="{:url('jd')}" class="weui-grid js_grid">
         <div class="weui-grid__icon">
           <img src="/public/center/icon/绩点.png" alt="">
         </div>
         <p class="weui-grid__label">
-          绩点
+          必修课绩点
+        </p>
+      </a>
+      <a href="{:url('xuanxiu')}" class="weui-grid js_grid">
+        <div class="weui-grid__icon">
+          <span class="weui-badge" style="position: absolute;top: 0.6em;right: 1em;">New</span>
+          <img src="/public/center/icon/新闻资讯.png" alt="">
+        </div>
+        <p class="weui-grid__label">
+          选修课查询
         </p>
       </a>
       <a href="#" class="weui-grid js_grid">
         <div class="weui-grid__icon">
-          <img src="/public/center/icon/报告查询.png" alt="">
+          <span class="weui-badge" style="position: absolute;top: 0.6em;right: 1em;background-color: #cccccc;">未开放</span>
+          <img src="/public/center/icon/点赞.png" alt="">
         </div>
         <p class="weui-grid__label">
-          选修查询
+          一键评教
         </p>
       </a>
       <a href="{:url('photo')}" class="weui-grid js_grid">
@@ -92,7 +103,7 @@
       </a>
       <a href="{:url('love/index')}" class="weui-grid js_grid">
         <div class="weui-grid__icon">
-          <img src="/public/center/icon/消息.png" alt="">
+          <img src="/public/center/icon/喜欢.png" alt="">
         </div>
         <p class="weui-grid__label">
           表白墙
@@ -106,7 +117,16 @@
           校历
         </p>
       </a>
-      <a href="#" class="weui-grid js_grid">
+      <a href="{:url('message')}" class="weui-grid js_grid">
+        <div class="weui-grid__icon">
+          <span class="weui-badge" style="position: absolute;top: 0.6em;right: 1em;">Hot</span>
+          <img src="/public/center/icon/社区.png" alt="">
+        </div>
+        <p class="weui-grid__label">
+          给我留言(建议)
+        </p>
+      </a>
+      <a href="{:url('user')}" class="weui-grid js_grid">
         <div class="weui-grid__icon">
           <img src="/public/center/icon/我的.png" alt="">
         </div>
